--- a/src/js/_popup.html
+++ b/src/js/_popup.html
@@ -13,11 +13,14 @@
 
   <div class="address">Change in enrollment between school years 2012-13 and 2016-17</div>
 
-  <div class="descript">Homeless-student enrollment: {{changeHome}}%</div>
+  <div class="descript">Homeless-student enrollment: {{changeHomeless}}%</div>
 
   <div class="descript">District enrollment: {{changeAll}}%</div>
 
-  <div class="descript">County support: {{changeAll}}</div>
+  <div class="address">{{countyName}} County homeless support</div>
+
+  <div class="descript">Youth shelter beds: {{bedYouth}} beds</div>
+  <div class="descript">Shelter beds for families: {{bedFamily}} beds</div>
 
 
 <!--   {{#link}}
